css fixes and spacing

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -133,7 +133,7 @@ body {
 	}
 
 	body > header {
-		background: linear-gradient(to right, #0a5ffc 0%, #3786fd 100%);;
+		background: linear-gradient(to right, #0a5ffc 0%, #3786fd 100%);
 		color: var(--color-primary-text);
 		display: flex;
 		position: sticky;
@@ -201,43 +201,44 @@ body {
 				color: #fff;
 			}
 			body > header .global-search .search-input:focus {
-				background: rgba(255, 255, 255, 1) !important;
-				color: var(--color-secondary-text);;
-			}
-		body > header .global-search ul {
-			position: fixed;
-			margin: 0px;
-			background: rgba(255, 255, 255, 1);
-			list-style-type: none;
-			padding: 0px;
-			width: inherit;
-			margin-top: 5px;
-			max-height: 40%;
-			overflow: auto;
-			border: 1px solid var(--color-secondary);
-		}
-
-			body > header .global-search ul li {
-				color: var(--color-primary);
-				color: var(--color-primary);
-				padding: 10px 10px;
-				height: 45px;
-				display: flex;
-			}
-
-			body > header .global-search ul li.hover {
 				background: #fff;
-				border: 1px solid var(--color-secondary);
+				color: #333;
+			}
+			body > header .global-search ul {
+				position: fixed;
+				margin: 0px;
+				background: #fff;
+				list-style-type: none;
+				padding: 0px;
+				width: inherit;
+				margin-top: 5px;
+				max-height: 400px;
+				overflow: auto;
+				box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
 			}
 
-			body > header .global-search ul li:hover {
-				background: var(--color-secondary);
-			}
-
-				body > header .global-search ul li a{
-					color: var(--color-secondary-text);
-					align-self: center;
+				body > header .global-search ul li {
+					color: #333;
+					height: 45px;
+					transition: 0.5s;
 				}
+
+				body > header .global-search ul li:hover {
+					background: #ddd;
+				}
+
+					body > header .global-search ul li a{
+						color: #333;
+						align-self: center;
+						display: flex;
+						height: 100%;
+						align-items: center;
+						padding-left: 10px;
+					}
+
+					body > header .global-search ul li a:hover {
+						background: none;
+					}
 
 		body > header .user-name {
 			white-space: nowrap;
